--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,23 @@
   font-size: large;
 }
 
+.template-container
+{
+  width: 800px;
+  margin: 0 auto;
+}
+.template
+{
+  background: rgb(238, 238, 238);
+    padding: 60px;
+    border: 1px solid blue;
+    width: 44%;
+    min-width: 200px;
+    display: inline-block;
+    float: left;
+    margin: 20px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
